--- a/movie.css
+++ b/movie.css
@@ -1,3 +1,7 @@
+/*-- second homework for Web Site Design
+  author: 陈斯敏
+  finish_time: 17/9/20
+  file_name: movie.css*/
 
 h1 {
   text-align: center;
@@ -91,7 +95,7 @@ p.comment q {
 p.name {
   width: 100%;
   margin:2%;
-  margin-bottom: 8%;
+  margin-bottom: 16%;
   display: inline-block;
 }
 
