--- a/movie.css
+++ b/movie.css
@@ -13,13 +13,14 @@ h1 {
 body {
   background-image: url("http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/background.png?version=1&modificationDate=1268896312000");
   font-size: 8pt;
+  margin: 0;
   font-family: "Verdana", "Tahoma", "sans-serif";
 }
 
 div#banner {
   text-align: center;
-  margin: 0;
   background-image: url("http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/bannerbackground.png?version=1&modificationDate=1268896312000");
+  height: 50px;
 }
 
 /*总体界面容器设置（先总容器——再分为左右容器）*/
@@ -34,6 +35,7 @@ div#main_content {
 div#right_content {
   width: 250px;
   float: right;
+  font-family: "Arial", "sans-serif";
   background-color: #A2B964;
 }
 
@@ -70,18 +72,19 @@ div.comment_column {
   display: inline-block;
 }
 
-/*评论框*/
+/*引用框*/
 p.comment {
-  width: 94%;
+  width: 92%;
   border: 2px solid gray;
   margin: 2%;
-  padding: 5px;
+  padding: 8px;
   background-color: #E1D697;
   display: inline-block;
 }
 
 p.comment img {
-  margin: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
   float: left;
 }
 
@@ -93,22 +96,22 @@ p.comment q {
 
 /*评论员名字信息*/
 p.name {
-  width: 100%;
-  margin:2%;
-  margin-bottom: 16%;
+  width: 96%;
+  margin: 2%;
+  margin-bottom: 3em;
   display: inline-block;
 }
 
 p.name img {
   float: left;
-  margin-left: 5px;
+  margin-right: 5px;
 }
 
 p.name span {
   font-style: italic;
 }
 
-/**/
+/*右侧文字*/
 dl {
   font-weight: bold;
   margin: 10px;
@@ -123,7 +126,7 @@ dd {
   font-weight: normal;
 }
 
-/*底部*/
+/*底部页码*/
 p#bottom {
   width: 100%;
   margin: 0;
@@ -134,6 +137,7 @@ p#bottom {
   background-color: #A2B964;
 }
 
+/*右下角图片链接*/
 div#img_link {
   position: fixed;
   right: 0;
