--- a/movie.css
+++ b/movie.css
@@ -7,20 +7,23 @@ h1 {
   text-align: center;
   font-size: 24pt;
   font-weight: bold;
-  font-family: "Tahoma", "Verdana", "sans-serif";
+  font-family: Tahoma, Verdana, sans-serif;
 }
 
 body {
   background-image: url("http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/background.png?version=1&modificationDate=1268896312000");
   font-size: 8pt;
   margin: 0;
-  font-family: "Verdana", "Tahoma", "sans-serif";
+  font-family: Verdana, Tahoma, sans-serif;
+  background-repeat: repeat;
 }
 
 div#banner {
   text-align: center;
   background-image: url("http://my.ss.sysu.edu.cn/wiki/download/attachments/7045968/bannerbackground.png?version=1&modificationDate=1268896312000");
   height: 50px;
+  width: 100%;
+  background-repeat: repeat-x;
 }
 
 /*总体界面容器设置（先总容器——再分为左右容器）*/
